test/black-box/v04/6.exp
[Line 5] Semantic error: Identifier abacaxi already used for declaration.
