test/black-box/v04/6.toc
# Funcao principal do programa
void toc()
  int abacaxi
  flt abacaxi = 9.0
